# GraphUniverse

./: .coverage  .gitignore  LICENSE  README.md  __init__.py  cora_benchmark.py  cora_benchmark_results.json  env_setup.sh  notebook.ipynb  nsd_mp.py  project_description.txt  project_structure.txt  pyproject.toml  requirements.txt  run_parameter_robustness_analysis.py  sheaf_model_comparison.py  streamlit_graph_family_generator.py  streamlit_graph_universe.py  test_comprehensive_metrics.py  test_gpu_resident_transductive.py  test_khop_community_counts.py  test_load_pyg_graphs.py  test_sheaf_diffusion.py  test_sheaf_integration.py  test_sheaf_lazy_init.py  test_sheaf_message.py  test_sheaf_precomputation.py  validate_parameter_sensitivity.py  validate_property_generation.py
.devcontainer/: devcontainer.json
GraphUniverse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
clean_inductive_results/inductive_20250529_175618/: error.json
clean_inductive_results/inductive_20250529_180659/: error.json
clean_inductive_results/inductive_20250529_181110/: error.json
configs/: run.yaml
examples/: quickstart.py
experiments/: __init__.py  inductive_result_dashboard.py  metrics.py  models.py  parallel_training.py  parameter_robustness_analysis.py  run_experiment.py  run_inductive_experiments.py  run_multi_fine_tuning.py  run_multi_inductive_experiments.py  run_multi_ssl_experiments.py  run_multi_transductive_experiments.py  run_multiple_experiments.py  run_ssl_experiments.py  single_experiment_dashboard.py  test_khop.py  test_metapath_label.py  visualization.ipynb
experiments/core/: __init__.py  analysis.py  config.py  data.py  experiment.py  metrics.py  models.py  training.py
experiments/dashboarding/: community_inductive.py  final_dashboarding.py  finetuning_results_dashboard.py  hyperparameter_analysis.py  inductive_fold_result_dashboard.py  inductive_result_dashboard.py  multi_dashboard.py  transductive_result_dashboard.py
experiments/inductive/: __init__.py  config.py  data.py  evaluation.py  experiment.py  multi_config.py  multi_experiment.py  run_experiments.py  self_supervised_task.py  ssl_experiment.py  training.py
experiments/neural_sheaf_diffusion/: bundle_models.py  cont_models.py  disc_models.py  inductive_bundle_models.py  inductive_cont_models.py  inductive_disc_models.py  inductive_sheaf_wrapper.py  laplacian_builders.py  orthogonal.py  sheaf_models.py
experiments/transductive/: __init__.py  config.py  data.py  experiment.py  metrics.py  training.py
graph_families/family_gcn_link_prediction_20250529_175110/: metadata.json
graph_universe/: __init__.py  analyze_parameter_space_coverage.py  dataset.py  feature_generator.py  feature_regimes.py  graph_family.py  graph_sample.py  graph_universe.py  model.py  param_space_analysis_dccc_sbm.py  run.py  viz_utils.py
mmsb/: __init__.py  analyze_parameter_space_coverage.py  explore_tudataset.py  feature_regimes.py  graph_family.py  model.py  param_space_analysis_dccc_sbm.py
model_encoders/: gps_encoder.py  neural_sheaf.py
model_encoders/sheaf_model_utils/: inductive_disccrete_models.py  laplacian_builders.py  sheaf_models.py
multi_finetune_results/finetune_sweep_20250609_144720/: summary.json
multi_inductive_results/multi_inductive_20250526_131652/: final_results.json  intermediate_results.json  multi_config.json  parameter_summary.json  results_summary.csv
multi_results/custom_sweep_20250527_104902/: final_results.json  intermediate_results.json
multi_results/custom_sweep_20250527_104941/: final_results.json  intermediate_results.json  multi_config.json  parameter_analysis.json  results_summary.csv
multi_results/custom_sweep_20250527_124931/: final_results.json  intermediate_results.json  multi_config.json  parameter_analysis.json  (+1 more)
param_space_results/: graph_parameters.csv
parameter_analysis_results/: all_baseline_analysis.pkl  all_randomized_analysis.pkl  avg_degree_range_baseline_analysis.pkl  avg_degree_range_randomized_analysis.pkl  center_variance_baseline_analysis.pkl  center_variance_randomized_analysis.pkl  cluster_variance_baseline_analysis.pkl  cluster_variance_randomized_analysis.pkl  community_cooccurrence_homogeneity_baseline_analysis.pkl  community_cooccurrence_homogeneity_randomized_analysis.pkl  degree_center_method_baseline_analysis.pkl  degree_center_method_randomized_analysis.pkl  degree_separation_range_baseline_analysis.pkl  degree_separation_range_randomized_analysis.pkl  edge_probability_variance_baseline_analysis.pkl  edge_probability_variance_randomized_analysis.pkl  edge_propensity_variance_baseline_analysis.pkl  homophily_range_baseline_analysis.pkl  homophily_range_randomized_analysis.pkl  max_mean_community_deviation_baseline_analysis.pkl  min_communities_baseline_analysis.pkl  min_n_nodes_baseline_analysis.pkl  min_n_nodes_randomized_analysis.pkl  power_law_exponent_range_baseline_analysis.pkl  power_law_exponent_range_randomized_analysis.pkl  random_baseline_analysis.pkl  use_dccc_sbm_baseline_analysis.pkl  use_dccc_sbm_randomized_analysis.pkl
parameter_coverage_results/: real_world_ENZYMES_analysis.csv  real_world_MUTAG_analysis.csv  real_world_PPI_analysis.csv  real_world_Twitch_analysis.csv  real_world_datasets_summary.csv
streamlit_app/: app.py  motif_and_role_analysis_integration.py  run.py  widgets.py
test/: conftest.py
test_files/: sheaf_model_comparison.py  test_bunn.py  test_cont_sheaf_diffusion.py  test_cont_sheaf_precomputation.py  test_inductive_bunn.py  test_inductive_cont_sheaf_diffusion.py  test_inductive_sheaf_diffusion.py  test_inductive_sheaf_pe.py  test_load_inductive_data.py  test_parameter_robustness_skip_signals.py  test_pe.py  test_sheaf_message.py  test_sheaf_precomputation.py
utils/: __init__.py  graph_family_utils.py  graph_family_visualizations.py  io.py  metapath_analysis.py  metrics.py  motif_and_role_analysis.py  parameter_analysis.py  sampler.py  visualizations.py
validation_results/: all_validation_results.pkl  avg_degree_results.pkl  homophily_results.pkl  n_communities_results.pkl  n_nodes_results.pkl
(+1892 files in other folders)
